<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextQualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/qualification"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:hint="@string/experience"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:digits="0123456789"
            android:fontFamily="sans-serif"
            android:hint="@string/salary"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/location"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/deadline"
            android:inputType="date"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/buttonPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/rounded_button_transparent"
            android:text="@string/post"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


</RelativeLayout>
</ScrollView>